# upgit

./: .gitignore  .gitmodules  Cargo.toml  README.md  compile-mac-on-linux.bash  e2e.bash  ensure-cross-compile-setup-linux.bash  go.mod  go.sum  integration.bash  make-testing-repo-container.sh
.cargo/: config
cmd/: upgit.go
src/: config.rs  creds.rs  end.rs  main.rs  string_ops.rs
test/common/: make-git-folder.sh
test/e2e/: docker-compose.yml  git-server.Dockerfile  test-pull.Dockerfile  test-pull.sh  upgit_rsa  upgit_rsa.pub
