[package]
name = "upgit"
version = "0.1.1"
authors = ["neallred <neallred@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.6"
rpassword = "5.0"
tokio = { version = "0.2", features = ["full"] }
clap = "2.33.1"
text_io = "0.1.8"
shellexpand = "2.0.0"
url = "2.1.1"
openssl = { version = "0.10.30", features = ["vendored"] }
